# multy-agent-system

./: .gitignore  README.md  agent-architecture.md  package-lock.json  pyproject.toml
docs/: setup-local.md
profiles/: agent.yaml  index.yaml
src/agent_system/: __init__.py  cli.py  config.py  graph.py  integrations.py  llm.py  memory.py  models.py  observability.py  policies.py  profile.py  rag.py  sandbox.py
src/local_agent_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
